cabal-version: 3.0
name: haskshot
version: 8.10

executable haskshot
    default-language: Haskell2010
    main-is: Main.hs
    other-modules: HSOptions
    build-depends:
        base >= 4.8,
        binary >= 0.8,
        bytestring >= 0.10,
        X11 >= 1.10,
        containers >= 0.6,
        JuicyPixels >= 3.3,
        primitive >= 0.7
